[#92345874] fixed layout issues

--- a/app/assets/stylesheets/pages.css.sass
+++ b/app/assets/stylesheets/pages.css.sass
@@ -3,6 +3,8 @@
 // You can use Sass here: http://sass-lang.com/
 
 .pages.about
+  .ocui-Header
+    margin-bottom: 3em
   .row
     section
       +grid-column(12)
@@ -11,15 +13,6 @@
       text-align: center
       padding: 1em 3em
       margin: 1em 0
-  h1
-    font-weight: 800
-    font-size: 1.9em
-  p
-    color: $subtitle-gray
-    line-height: 1.4em
-    font-size: 1.1em
-    &.title
-      color: $title-gray
   .image
     margin: 1.5em 0 2em 0
   .call-to-action
