--- a/app/assets/stylesheets/tasks/create.css.scss
+++ b/app/assets/stylesheets/tasks/create.css.scss
@@ -1,6 +1,10 @@
 .tasks.new,
 .tasks.edit,
 .tasks.create {
+  .ocui-Header {
+    margin-bottom: 3em;
+  }
+
   .title-field {
     @include grid-column(8);
   }
